tidy poetry dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+aiohttp==3.8.6
+aiolimiter==1.1.0
+aiosignal==1.3.1
 annotated-types==0.6.0
-anthropic==0.25.7
+anthropic==0.40.0
 anyio==4.2.0
 appdirs==1.4.4
 appnope==0.1.4
@@ -10,10 +13,12 @@ asn1crypto==1.5.1
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
+Authlib==1.2.1
 backoff==2.2.1
 bcrypt==4.1.3
 beautifulsoup4==4.12.3
 bitarray==2.9.2
+black==23.10.1
 bs4==0.0.2
 build==1.2.1
 cachetools==5.3.3
@@ -25,7 +30,7 @@ chromadb==0.4.24
 ckzg==1.0.2
 click==8.1.7
 cloudpickle==2.2.1
-cohere==5.1.8
+cohere==5.13.3
 coloredlogs==15.0.1
 comm==0.2.1
 contourpy==1.2.1
@@ -41,6 +46,7 @@ defusedxml==0.7.1
 Deprecated==1.2.14
 distro==1.9.0
 dune_client==1.7.4
+durationpy==0.9
 eth-account==0.11.2
 eth-hash==0.7.0
 eth-keyfile==0.8.1
@@ -60,11 +66,15 @@ flatbuffers==24.3.25
 fonttools==4.53.1
 frozenlist==1.4.1
 fsspec==2024.2.0
+google-ai-generativelanguage==0.4.0
+google-api-core==2.15.0
 google-auth==2.29.0
+google-generativeai==0.3.2
 google_search_results==2.4.2
 googleapis-common-protos==1.63.0
 greenlet==3.0.3
 grpcio==1.63.0
+grpcio-status==1.60.0
 h11==0.14.0
 hexbytes==0.3.1
 html2text==2024.2.26
@@ -79,7 +89,9 @@ importlib-metadata==7.0.0
 importlib_resources==6.4.0
 ipykernel==6.29.2
 ipython==8.22.1
+isort==5.12.0
 jedi==0.19.1
+jiter==0.8.0
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.22.0
@@ -87,16 +99,20 @@ jsonschema-specifications==2023.12.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 kiwisolver==1.4.5
-langchain
-langchain-anthropic
-langchain-cohere
-langchain-community
-langchain-mistralai
-langchain-openai
-langchain-text-splitters
-langchainhub
-langserve==0.0.48
-langsmith==0.1.68
+kubernetes==31.0.0
+langchain==0.3.10
+langchain-anthropic==0.3.0
+langchain-cohere==0.3.3
+langchain-community==0.3.10
+langchain-core==0.3.22
+langchain-experimental==0.3.3
+langchain-google-genai==0.0.6
+langchain-mistralai==0.2.3
+langchain-openai==0.2.11
+langchain-text-splitters==0.3.2
+langchainhub==0.1.21
+langserve==0.3.0
+langsmith==0.1.147
 locket==1.0.0
 lru-dict==1.2.0
 lxml==5.2.2
@@ -116,7 +132,7 @@ nest-asyncio==1.6.0
 numpy==1.26.3
 oauthlib==3.2.2
 onnxruntime==1.17.3
-openai==1.10.0
+openai==1.57.0
 opentelemetry-api==1.24.0
 opentelemetry-exporter-otlp-proto-common==1.24.0
 opentelemetry-exporter-otlp-proto-grpc==1.24.0
@@ -132,16 +148,20 @@ outcome==1.3.0.post0
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.2
+parameterized==0.9.0
 parsimonious==0.10.0
 parso==0.8.3
 partd==1.4.2
+pathspec==0.11.2
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.0
 posthog==3.5.0
 prompt-toolkit==3.0.43
+proto-plus==1.23.0
 protobuf==4.25.3
 psutil==5.9.8
+psycopg2==2.9.9
 ptyprocess==0.7.0
 pulsar-client==3.5.0
 pure-eval==0.2.2
@@ -150,18 +170,29 @@ pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 pycryptodome==3.20.0
-pydantic==2.5.3
-pydantic_core==2.14.6
+pydantic==2.10.3
+pydantic-settings==2.6.1
+pydantic_core==2.27.1
+pyee==11.1.1
 Pygments==2.17.2
+PyJWT==2.10.1
+pyOpenSSL==24.3.0
+pyparsing==3.2.0
+PyPika==0.48.9
+pyppeteer==2.0.0
+pyproject_hooks==1.2.0
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2024.1
 pyunormalize==15.1.0
+PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.35.1
 regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
 rich==13.7.1
 rlp==4.0.1
 rpds-py==0.18.1
@@ -184,8 +215,9 @@ starlette==0.35.1
 structlog==20.2.0
 swifter==1.4.0
 sympy==1.12
+tabulate==0.9.0
 tenacity==8.2.3
-tiktoken==0.5.2
+tiktoken==0.8.0
 tokenizers==0.19.1
 tomli==2.0.1
 tomlkit==0.13.0
@@ -201,16 +233,19 @@ typer==0.12.3
 types-Deprecated==1.2.9.20240311
 types-python-dateutil==2.9.0.20240316
 types-PyYAML==6.0.12.20240311
-types-requests==2.31.0.20240402
+types-requests==2.32.0.20241016
 types-setuptools==70.1.0.20240627
 typing-inspect==0.9.0
-typing_extensions==4.9.0
+typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==1.26.20
 uvicorn==0.27.0
 uvloop==0.19.0
+validators==0.22.0
+voyageai==0.1.4
 watchfiles==0.21.0
-urllib3==2.2.1
 wcwidth==0.2.13
+weaviate-client==3.25.3
 web3==6.19.0
 websocket-client==1.8.0
 websockets==10.4
