--- a/pyproject.toml
+++ b/pyproject.toml
@@ -253,6 +253,7 @@ langserve = "^0.3.0"
 langchain-community = "^0.3.10"
 langchain-mistralai = "^0.2.3"
 langchain-cohere = "^0.3.3"
+sse-starlette = "^2.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
