--- a/pyproject.toml
+++ b/pyproject.toml
@@ -254,6 +254,7 @@ langchain-community = "^0.3.10"
 langchain-mistralai = "^0.2.3"
 langchain-cohere = "^0.3.3"
 sse-starlette = "^2.1.3"
+gitpython = "^3.1.43"
 
 
 [tool.poetry.group.dev.dependencies]
