--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,6 @@ hexbytes = "0.3.1"
 html2text = "2024.2.26"
 httpcore = "1.0.2"
 httptools = "0.6.1"
-httpx = "0.26.0"
 httpx-sse = "0.4.0"
 huggingface-hub = "0.21.3"
 humanfriendly = "10.0"
@@ -147,7 +146,6 @@ opentelemetry-proto = "1.24.0"
 opentelemetry-sdk = "1.24.0"
 opentelemetry-semantic-conventions = "0.45b0"
 opentelemetry-util-http = "0.45b0"
-orjson = "3.9.15"
 outcome = "1.3.0.post0"
 overrides = "7.7.0"
 packaging = "23.2"
@@ -255,6 +253,9 @@ langchain-mistralai = "^0.2.3"
 langchain-cohere = "^0.3.3"
 sse-starlette = "^2.1.3"
 gitpython = "^3.1.43"
+langchain-ollama = "^0.2.3"
+ollama = "^0.4.7"
+langgraph = "^0.2.74"
 
 
 [tool.poetry.group.dev.dependencies]
