--- a/chat-langchain/.env.development
+++ b/chat-langchain/.env.development
@@ -1,2 +1,3 @@
 ENV_NAME=dev
-NEXT_PUBLIC_API_URL=http://192.168.3.6:8081/chat
+NEXT_PUBLIC_CHAT_URL=http://192.168.3.6:8081/chat
+NEXT_PUBLIC_API_URL=http://192.168.3.6:8081/api
