--- a/assistant-graphs/pyproject.toml
+++ b/assistant-graphs/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "gitpython (>=3.1.44,<4.0.0)",
     "fastapi (>=0.115.12,<0.116.0)",
     "tradingview-ta (>=3.3.0,<4.0.0)",
+    "boto3 (>=1.38.3,<2.0.0)",
+    "vertexai (>=1.71.1,<2.0.0)",
+    "pillow (>=11.2.1,<12.0.0)",
 ]
 
 [project.optional-dependencies]
