--- a/assistant-graphs/pyproject.toml
+++ b/assistant-graphs/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 readme = "README.md"
 license = { text = "MIT" }
-requires-python = ">=3.11,<4.0"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "langgraph>=0.2.6",
     "python-dotenv>=1.0.1",
@@ -25,6 +25,7 @@ dependencies = [
     "boto3 (>=1.38.3,<2.0.0)",
     "vertexai (>=1.71.1,<2.0.0)",
     "pillow (>=11.2.1,<12.0.0)",
+    "langgraph-checkpoint-redis (>=0.0.5,<0.0.6)",
 ]
 
 [project.optional-dependencies]
