--- a/assistant-graphs/pyproject.toml
+++ b/assistant-graphs/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "vertexai (>=1.71.1,<2.0.0)",
     "pillow (>=11.2.1,<12.0.0)",
     "langgraph-checkpoint-redis (>=0.0.5,<0.0.6)",
+    "certifi (>=2025.7.14,<2026.0.0)",
+    "spider-client (>=0.1.69,<0.2.0)",
 ]
 
 [project.optional-dependencies]
